--- a/ReactApp/package.json
+++ b/ReactApp/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^0.7.1",
     "chakra-ui-autocomplete": "^1.4.5",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.5",
