--- a/ReactApp/package.json
+++ b/ReactApp/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.7.1",
+    "axios": "^1.7.2",
     "chakra-ui-autocomplete": "^1.4.5",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.5",
